fixed up some spacing in header

--- a/static/scss/_768.scss
+++ b/static/scss/_768.scss
@@ -2,7 +2,7 @@
     body {
         header {
             flex-direction: row;
-            margin-bottom: 20px;
+            margin: 40px;
             #heading-text {
                 text-align: left;
             }
